<resources>
    <string name="app_name">SpeakUP</string>
    <string name="full_name">Full Name</string>
    <string name="create_an_account">Create an Account</string>
    <string name="personal_information">Personal Information</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="complete_address">Complete Address</string>
    <string name="ok">OK</string>
    <string name="registered">REGISTERED</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="register">REGISTER</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="menu">MENU</string>
    <string name="blank_space">" "</string>
    <string name="logout">LOGOUT</string>
    <string name="home">HOME</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="your_review">Your Review</string>
    <string name="mobile">Mobile</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="my_ratings">MY RATINGS</string>
    <string name="my_complaints">MY COMPLAINTS</string>
    <string name="jeepney">JEEPNEY</string>
    <string name="search_for_body_plate_number">Search for Body/Plate Number</string>
    <string name="search">Search</string>
    <string name="no_plate_found">No Plate Found</string>
    <string name="add_plate">Add Plate</string>
    <string name="taxi">TAXI</string>
    <string name="taxicle">TAXICLE</string>
    <string name="tricycle">TRICYCLE</string>
    <string name="yourreview">YOUR REVIEW</string>
    <string name="rate_me">RATE ME</string>
    <string name="plate_number">Plate Number</string>
    <string name="how_was_your_trip">How was your trip?</string>
    <string name="complaints">Complaints?</string>
    <string name="please_check_your_spam_box_if_the_email_is_not_in_the_inbox">Please check your Spam box if the email is not in the Inbox.</string>
    <string name="tutorials">TUTORIALS</string>
    <string name="about_us">ABOUT US</string>
    <string name="aboutUStext">In a commuter\'s day-to-day experience with the Public Utility Vehicles (PUVs), problems with drivers and operators are inevitable. The proposed system aims to help commuters easily send their complaints and rate those who performed their job well. The system, with its organized and accurate gathered information on the other hand, helps the Public Safety Office (PSO) of Naga City, the local office or unit in charge of public safety and concern, easily manage the PUVs, their drivers, and operators. The system can only be used within the Local Government Unit of Naga City. Given that the proposed system gives importance to users\' experience and feedback, it will be of great for the city government to achieve its ultimate goal of having a people-centered community.</string>
    <string name="contact_us">CONTACT US</string>
    <string-array name="complaints">
        <item>Others: </item>
        <item>Contracting Passenger</item>
        <item>Overcharging of Fare / Undercharging</item>
        <item>Arrogant / Discouteous Driver</item>
        <item>Refusal to Convey Passenger</item>
        <item>Fast Meter</item>
        <item>No Flag Down Meter</item>
        <item>Hit and Run</item>
        <item>Threatening Passenger</item>
        <item>Reckless Driving</item>
        <item>Discriminating Againts Passenger</item>
        <item>Refusal to grant Senior / Student / PWD Discount</item>
    </string-array>

</resources>