<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <View
            android:id="@+id/header_void"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imagebackButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_void"
            app:srcCompat="@drawable/backward_arrow"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/create_an_account"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_void"
            tools:ignore="MissingConstraints" />

        <EditText
        android:id="@+id/txtFullname"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/text_box_layout"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/text_box_layout"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFullname"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/text_box_layout"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:textColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/personal_information"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/text_box_layout"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:maxLength="11"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/text_box_layout"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone"
        tools:ignore="MissingConstraints"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="280dp"
        android:layout_height="120dp"
        android:background="@drawable/text_box_layout"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/complete_address"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:ignore="MissingConstraints"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_button_blue"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress"
        tools:ignore="MissingConstraints" />

<!--        <ProgressBar-->
<!--            android:id="@+id/progress"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:layout_margin="30dp"-->
<!--            android:layout_marginTop="29dp"-->
<!--            android:visibility="invisible"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.498"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.499" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</ScrollView>