<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ComplaintFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_space"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/header_void"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="154dp"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/basic_option_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header_void"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/basic_option"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/todo"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/basic_option"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView9"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/plate_number"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/text_box_layout"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/basic_option"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/date_picker"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box_layout"
                android:gravity="center"
                android:hint="@string/date"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.844"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plate_number"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/time_picker"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/text_box_layout"
                android:gravity="center"
                android:hint="@string/time"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plate_number"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/complaint_text"
                android:layout_width="330dp"
                android:layout_height="120dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/text_box_layout"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/your_complaint"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plate_number"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/upload_image_view_camera"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.254"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/complaint_text"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/upload_image_view_camera_gallery"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/complaint_text"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/upload_other_files"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.737"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/complaint_text"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/capture_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/capture_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.239"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upload_image_view_camera"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/add_image_video"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/add_image_video"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upload_image_view_camera_gallery"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/add_audio"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/add_audio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.76"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/upload_other_files"
                tools:ignore="MissingConstraints" />


            <Button
                android:id="@+id/register_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_button_blue"
                android:text="@string/SUBMIT"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_image_video"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>